# PosTagger

./: CMakeLists.txt
config/: crf_config
include/tagger/: Base_Tagger.h
include/tagger/crf/: CRFTagger.h
include/tagger/preprocessor/: PreProcessor.h  strtool.h
src/tagger/: Base_Tagger.cpp  main.cpp  predict.cpp  train.cpp
src/tagger/crf/: CRFTagger.cpp
src/tagger/preprocessor/: PreProcessor.cpp
